Fixed sidebar height being weird on mobile

--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ table {
     font-style: italic;
 }
 
+html {
+    --windowHeight: 100vh;
+}
+
 body, html {
     display: flex;
 }
@@ -106,7 +110,7 @@ a:visited {
     flex-direction: column;
     flex-shrink: 0;
     width: 550px;
-    min-height: 100vh;
+    min-height: var(--windowHeight);
     height: 100%;
     /* height: 100vh; */
     background-image: url("./arun-clarke-5vLPyrbf5Tc-unsplash.jpg");
